--- a/assets/css/wwd.css
+++ b/assets/css/wwd.css
@@ -3,6 +3,8 @@
 # General
 --------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');
+@import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 
 body {
   font-family: 'Lato', sans-serif;
@@ -390,7 +392,7 @@ h1, h2, h3, h4, h5, h6, .font-primary {
 #hero {
   width: 100%;
   height: 50vh;
-  background: url("../img/1copy-Copy.jpg") center;
+  background: url("../img/3crop.jpg") center;
   background-size: cover;
   position: relative;
   margin-top: -80px;
@@ -1072,6 +1074,24 @@ section {
   text-align: left;
   margin-left: 25%;
   margin-right: 25%;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
-#textBody 
+#textBody h4{
+  font-size: 2rem;
+  font-family: 'Newsreader', serif;
+  margin-bottom: 2%;
+  
+}
+
+#textBody h5{
+  font-size: 1.5rem;
+  color: grey;
+  font-weight: 400;
+  margin-bottom: 2%;
+}
+
+#textBody p{
+  font-family: 'Newsreader', serif;
+}
