people page added

--- a/assets/css/people.css
+++ b/assets/css/people.css
@@ -4,7 +4,7 @@
 --------------------------------------------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900');
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Benne&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 
 body {
   font-family: 'Lato', sans-serif;
@@ -634,29 +634,28 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+.about {
+    margin-left: 28%;
+    margin-right: 28%;
+}
+
 .about h3 {
-  font-weight: 300;
-  font-size: 26px;
+  font-weight: 500;
+  font-size: 32px;
+  font-family: 'Newsreader', serif;
 }
 
-.about ul {
-  list-style: none;
-  padding: 0;
+.about h6 {
+    font-weight: 500;
+    font-size: 20px;
+    font-family: 'Lato', serif;
+    color: #666666;
+    margin-top: 7%;
 }
 
-.about ul li {
-  padding-bottom: 10px;
-}
 
-.about ul i {
-  font-size: 20px;
-  padding-right: 4px;
-  color: #fd680e;
-}
 
-.about p:last-child {
-  margin-bottom: 0;
-}
+
 
 /*--------------------------------------------------------------
 # Why Us
@@ -967,6 +966,25 @@ section {
   color: black ;
 }
 
+#intro .container .row .col-sm-12 #founder{
+    color:black;
+    font-family: 'Lato', serif;
+    font-weight: 600;
+    /* border: 5px solid red; */
+    text-align: left;
+}
+
+#intro .container .row .col-sm-12 #information{
+    color:black;
+    font-family: 'Merriweather', serif;
+    font-weight: 300;
+    /* border: 5px solid red; */
+    text-align: left;
+    color:rgb(66, 66, 66);
+    line-height: 1.8;
+}
+
+
 .description{
   /*padding-top: 0.5%;*/
   /*border: 3px solid red;*/
@@ -974,6 +992,7 @@ section {
   text-align: center;
   margin:auto;
   font-family: Source Serif Pro;
+  
 }
 
 .description p{
