--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -448,7 +448,22 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   line-height: 56px;
   line-height: 56px;
   color: white;
+
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
+
+@keyframes fadeInAnimation {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+
 
 #hero h2 {
   color: white;
@@ -456,6 +471,10 @@ h1, h2, h3, h4, h5, h6, .font-primary {
   margin-top: 25px;
   font-size: 24px;
   font-size:2rem;
+
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
 }
 
 #hero .php-email-form .error-message {
@@ -610,6 +629,8 @@ section {
 /*--------------------------------------------------------------
 # About
 --------------------------------------------------------------*/
+
+
 .about h3 {
   font-weight: 300;
   font-size: 26px;
