--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -963,6 +963,7 @@ section {
   text-align: center;
   /*margin-left: 22%;*/
   padding-left: 22%;
+  padding-right: 4%;
   }
 
 .banner3{
@@ -970,6 +971,7 @@ section {
   text-align: center;
   /*margin-right: 18%;*/
   padding-right: 18%;
+  padding-left: 4%;
   }
 }
 
@@ -1062,6 +1064,32 @@ section {
 
 */
 
+/*#hero .box{
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+#hero .box span{
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-bottom: 4px solid #ffffff;
+  border-right: 4px solid #ffffff;
+  transform: rotate(45deg);
+  margin: -17px;
+  animation: animate 10s infinite;
+}
+#hero .box span:nth-child(2){
+  animation-delay: -0.2s;
+
+}
+#hero .box span:nth-child(3){
+  animation-delay: -0.4s;
+  
+}*/
+
 
 @media (max-width: 576px){
   .banner2 img{
@@ -1136,8 +1164,6 @@ section {
     margin-left: 10%;
     margin-right: 10%;
     margin-top: -5%;
-
-
   }
 /*  .otherFooter{
     border: 3px solid #18d26e;
@@ -1274,7 +1300,7 @@ section {
   font-size: 26px;
   margin-bottom: 5%;
 /*  border: 3px solid #18d26e;*/
-margin-top: -6%;
+  margin-top: -6%;
 /*  margin-left: 15%;
   margin-right: 15%;*/
   }
@@ -1371,7 +1397,194 @@ margin-top: -6%;
     margin-top: 25px;*/
     /*font-size: 24px;*/
     font-size:1.8rem;
-    margin-top: 0.5%; 
+    margin-top: 1.5%; 
+
+/*
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;*/
+  }
+/*  #hero{
+    border: 3px solid #18d26e;
+    
+  }*/
+
+/*  .description p{
+
+  }*/
+}
+
+
+@media (max-width: 1500px){
+  .banner2 img{
+    height: 85%;
+    width: 85%;
+    /*padding-left:0 !important;
+    padding-right:0 !important;*/
+
+  }
+  .banner3 img{
+    height: 85%;
+    width: 85%;
+  }
+
+
+
+  .banner2{
+    text-align: center;
+    /*border: 3px solid #18d26e;*/
+    margin-right: -5%;
+    margin-bottom: 7%;
+    padding-left: 1%;
+  }
+  .banner3{
+    text-align: center;
+    /*border: 3px solid #18d26e;*/
+    margin-left: -5%;
+    margin-bottom: 7%;
+    padding-right: 2%;
+  }
+/*  .banner2 a{
+    margin-bottom: 15%;
+  }
+
+  .banner3 a{
+    margin-bottom: 15%;
+  }*/
+
+  #header .logo img {
+  /*padding: 0;*/
+  /*margin: 0;*/
+  height: 50px;
+  /*padding-top: -100px;*/
+  }
+  #header button {
+  /*padding: 0;*/
+  margin-top: -1%;
+  font-size:10px
+  /*padding-top: -100px;*/
+  }
+  #hero {
+  width: 100%;
+  height: 80vh;
+/*  background: url("../img/zac-ong-JHN1-mpgXjo-unsplash.jpg") center center;
+  background-size: cover;
+  position: relative;
+  margin-top: -80px;
+  z-index: 9;*/
+  }
+  .about h3 {
+  font-weight: 300;
+  font-size: 26px;
+  margin-bottom: 5%;
+ 
+  margin-top: -1%;
+/*  margin-left: 15%;
+  margin-right: 15%;*/
+  }
+
+  .about {
+   
+    width: 60%;
+    margin: auto;
+
+  }
+  .about p {
+
+  /*border: 3px solid #18d26e;*/
+  margin-left: -75%;
+  margin-right: -75%;
+  /*margin-bottom: 20%;*/
+  
+  
+  }
+  #images{
+    /*border: 3px solid #18d26e;*/
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: -1.5%;
+
+  }
+
+
+/*  .otherFooter{
+    border: 3px solid #18d26e;
+    margin-left: 15%;
+    margin-right: 15%;
+  }*/
+/*  #footer{
+    border: 3px solid #18d26e;
+    margin-left: 15%;
+    margin-right: 15%;
+  }*/
+  #hero {
+  width: 100%;
+  height: 80vh;
+  background: url("../img/zac-ong-JHN1-mpgXjo-unsplash.jpg") center center;
+  background-size: cover;
+  position: relative;
+  margin-top: -80px;
+  z-index: 9;
+  overflow-x:hidden;
+  /*margin-right: 40%;*/
+  /*margin-left: 40%;*/
+  /*border: 3px solid #18d26e;*/
+
+}
+
+
+
+  .nav-menu {
+/*    position: fixed;
+    top: 0;
+    bottom: 0;
+    z-index: 9999;
+    overflow-y: auto;
+    right: -260px;*/
+    width: 160px;
+/*    padding-top: 18px;
+    background: rgba(34, 34, 34, 0.8);
+    transition: 0.4s;*/
+  }
+  .nav-toggle-active {
+    right: 180px;
+  }
+
+  #hero h1 {
+  /*margin: 0 0 3% 0;*/
+  /*font-size: 48px;*/
+  margin-top: 5%;
+  font-size:3rem;
+  font-weight: 700;
+  line-height: 56px;
+  line-height: 56px;
+  color: white;
+
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  }
+
+  #hero{
+  /*margin: 0 0 3% 0;*/
+  /*font-size: 48px;*/
+  
+
+  }
+
+
+  .otherFooter p{
+    
+    padding-left: 7%;
+    padding-right: 7%;
+  }
+  #hero h2 {
+/*    color: white;
+    margin-bottom: 30px;
+    margin-top: 25px;*/
+    /*font-size: 24px;*/
+    font-size:1.8rem;
+    margin-top: 1.5%; 
 
 /*
     animation: fadeInAnimation ease 3s;
