--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1147,9 +1147,10 @@ section {
   font-weight: 300;
   font-size: 26px;
   margin-bottom: 10%;
-/*  border: 3px solid #18d26e;
+  /*border: 3px solid #18d26e;*/
   margin-left: 15%;
-  margin-right: 15%;*/
+  margin-right: 15%;
+  margin-top: -10%;
   }
   .about p {
 
