--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1150,14 +1150,21 @@ section {
   /*border: 3px solid #18d26e;*/
   margin-left: 15%;
   margin-right: 15%;
-  margin-top: -10%;
+  /*margin-top: -3%;*/
   }
   .about p {
 
   /*border: 3px solid #18d26e;*/
   margin-left: -75%;
   margin-right: -75%;
-  /*margin-bottom: 20%;*/
+  margin-bottom: 10%;
+  
+  }
+  .about {
+
+  /*border: 3px solid #18d26e;*/
+  margin-bottom: -10%;
+
   
   }
   #images{
