--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1150,7 +1150,7 @@ section {
   /*border: 3px solid #18d26e;*/
   margin-left: 15%;
   margin-right: 15%;
-  /*margin-top: -3%;*/
+  margin-top: -13%;
   }
   .about p {
 
