--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -956,20 +956,16 @@ section {
   padding-left: 0;
 
 }
-
+/*
 @media (min-width: 1200px){
   .banner2{
-  /*border: 4px solid red;*/
-  text-align: center;
-  /*margin-left: 22%;*/
-  padding-left: 22%;
-  padding-right: 4%;
+    text-align: center;
+    padding-left: 22%;
+    padding-right: 4%;
   }
 
 .banner3{
-  /*border: 4px solid red;*/
   text-align: center;
-  /*margin-right: 18%;*/
   padding-right: 18%;
   padding-left: 4%;
   }
@@ -998,29 +994,27 @@ section {
 }
 
 .banner2 p{
-  /*padding-top: 4%;*/
   font-size: 1.1rem;
   padding-right: 10%;
   padding-left: 10%;
 }
 
 .banner3 p{
-  /*padding-top: 4%;*/
   font-size: 1.1rem;
   padding-right: 12%;
   padding-left: 12%;
 }
 
 .banner2 a{
-  /*padding-top: 4%;*/
+
   font-size: 1.1rem;
-  /*color: rgb(85,85,85);*/
+
 }
 
 .banner3 a{
-  /*padding-top: 4%;*/
+
   font-size: 1.1rem;
-  /*color: rgb(85,85,85);*/
+
 }
 
 
@@ -1034,67 +1028,13 @@ section {
   margin: 0;
   padding-bottom: 7%;
 }
-
-/*#image1{
-  border: 3px solid red;
-
-}
-
-#image2{
-  border: 3px solid red;
-
-}
 */
-
-
-/*
-#image1 img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  
-}
-
-#image2 img{
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  
-}
-
-*/
-
-/*#hero .box{
-  position: absolute;
-  top: 90%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-}
-
-#hero .box span{
-  display: block;
-  width: 40px;
-  height: 40px;
-  border-bottom: 4px solid #ffffff;
-  border-right: 4px solid #ffffff;
-  transform: rotate(45deg);
-  margin: -17px;
-  animation: animate 10s infinite;
-}
-#hero .box span:nth-child(2){
-  animation-delay: -0.2s;
-
-}
-#hero .box span:nth-child(3){
-  animation-delay: -0.4s;
-  
-}*/
 
 
 @media (max-width: 576px){
   .banner2 img{
     height: 100%;
-    width: 100%;
+    width: 104%;
     /*padding-left:0 !important;
     padding-right:0 !important;*/
 
@@ -1108,7 +1048,6 @@ section {
 
   .banner2{
     text-align: center;
-    
     margin-bottom: 10%;
   }
   .banner3{
@@ -1121,6 +1060,10 @@ section {
   .banner3 a{
     margin-bottom: 15%;
   }*/
+
+  #images h4{
+    margin-top: 5%;
+  }
 
   #header .logo img {
   /*padding: 0;*/
@@ -1172,12 +1115,17 @@ section {
     margin-left: 10%;
     margin-right: 10%;
     margin-top: -5%;
+    margin-bottom: 13%;
   }
-/*  .otherFooter{
-    border: 3px solid #18d26e;
-    margin-left: 15%;
-    margin-right: 15%;
-  }*/
+  .otherFooter p{
+    /*border: 3px solid #18d26e;*/
+    margin-left: 2%;
+    margin-right: 2%;
+    /*margin-top: 2%;*/
+    /*margin-bottom: 5%;*/
+    padding-bottom: 7%;
+    padding-top: 7%;
+  }
 /*  #footer{
     border: 3px solid #18d26e;
     margin-left: 15%;
