--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1197,7 +1197,7 @@ section {
 }
 
 
-@media (min-width: 600px){
+@media (min-width: 600px) and (max-width: 900px){
   .banner2 img{
     height: 100%;
     width: 100%;
@@ -1210,6 +1210,20 @@ section {
     width: 104%;
   }
 
+  .description p{
+
+    /*  margin: auto; */
+    padding-left: 16%;
+    padding-right: 16%;
+
+  }
+
+  #images h4{
+    margin-top: 5%;
+  }
+
+
+
 
 
   .banner2{
@@ -1219,6 +1233,7 @@ section {
   }
   .banner3{
     text-align: center;
+    margin-bottom: 10%;
   }
 /*  .banner2 a{
     margin-bottom: 15%;
@@ -1253,7 +1268,7 @@ section {
   font-weight: 300;
   font-size: 26px;
   margin-bottom: 5%;
-/*  border: 3px solid #18d26e;*/
+
   margin-top: -6%;
 /*  margin-left: 15%;
   margin-right: 15%;*/
