--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1599,6 +1599,148 @@ section {
   }*/
 }
 
+@media (min-width: 1100px){
+  .banner2 img{
+    height: 100%;
+    width: 71%;
+    /*padding-left:0 !important;
+    padding-right:0 !important;*/
+
+  }
+  .banner3 img{
+    height: 100%;
+    width: 70%;
+
+  }
+
+  #images .container .row #firstImage{
+
+  }
+  #images .container .row #secondImage{
+
+  }
+
+  #images h4{
+    margin-top: 4%;
+    /*border: 3px solid #18d26e;*/
+  }
+
+
+
+  .banner2{
+    text-align: center;
+    border: 3px solid #18d26e;
+    margin-bottom: 7%;
+  }
+  .banner3{
+    text-align: center;
+    border: 3px solid #18d26e;
+
+    margin-bottom: 7%;
+   
+  }
+/*  .banner2 a{
+    margin-bottom: 15%;
+  }
+
+  .banner3 a{
+    margin-bottom: 15%;
+  }*/
+
+  #header .logo img {
+  /*padding: 0;*/
+  /*margin: 0;*/
+  height: 50px;
+  /*padding-top: -100px;*/
+  }
+  #header button {
+  /*padding: 0;*/
+  margin-top: -1%;
+  font-size:10px
+  /*padding-top: -100px;*/
+  }
+  #hero {
+  width: 100%;
+  height: 80vh;
+  
+  }
+
+  .about {
+   
+    width: 60%;
+    margin: auto;
+
+  }
+
+  .about h3{
+    margin-top: -1%;
+
+  }
+  .about p {
+
+  
+  margin-left: -35%;
+  margin-right: -35%;
+  /*border: 3px solid #18d26e;*/
+  /*margin-bottom: 20%;*/
+  margin-top: 5%;
+  
+  
+  }
+  #images{
+    
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: -1.5%;
+
+  }
+
+
+/*  .otherFooter{
+    border: 3px solid #18d26e;
+    margin-left: 15%;
+    margin-right: 15%;
+  }*/
+/*  #footer{
+    border: 3px solid #18d26e;
+    margin-left: 15%;
+    margin-right: 15%;
+  }*/
+
+
+
+
+
+/*  .nav-toggle-active {
+    right: 180px;
+  }*/
+
+  #hero h1 {
+  /*margin: 0 0 3% 0;*/
+  /*font-size: 48px;*/
+  margin-top: 1%;
+  font-size:5rem;
+  font-weight: 700;
+  line-height: 56px;
+  line-height: 56px;
+  color: white;
+
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  }
+
+
+
+
+  #hero h2 {
+    font-size:2.5rem;
+    margin-top: 1.5%; 
+
+
+  }
+
+}
 
 
 /*============ BOOTSTRAP BREAK POINTS:
