--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1069,7 +1069,7 @@ section {
   }
   #header button {
   /*padding: 0;*/
-  margin-top: -2.5%;
+  margin-top: -1.5%;
   font-size:10px
   /*padding-top: -100px;*/
   }
@@ -1197,7 +1197,7 @@ section {
 }
 
 /*Phone Landscape and Tablet Potrait*/ 
-@media (min-width: 580px) and (max-width: 900px){
+@media (min-width: 577px) and (max-width: 900px){
   .banner2 img{
     height: 100%;
     width: 104%;
@@ -1457,7 +1457,7 @@ section {
   }
   #header button {
   /*padding: 0;*/
-  margin-top: -1%;
+  margin-top: -0.5%;
   font-size:10px
   /*padding-top: -100px;*/
   }
@@ -1599,17 +1599,17 @@ section {
   }*/
 }
 
-@media (min-width: 1100px){
+@media (min-width: 1051px){
   .banner2 img{
     height: 100%;
-    width: 71%;
+    width: 100%;
     /*padding-left:0 !important;
     padding-right:0 !important;*/
 
   }
   .banner3 img{
     height: 100%;
-    width: 70%;
+    width: 100%;
 
   }
 
@@ -1629,14 +1629,17 @@ section {
 
   .banner2{
     text-align: center;
-    border: 3px solid #18d26e;
+    /*border: 3px solid #18d26e;*/
     margin-bottom: 7%;
+    width: 71%;
+    margin-left: 30%;
   }
   .banner3{
     text-align: center;
-    border: 3px solid #18d26e;
-
+    /*border: 3px solid #18d26e;*/
+    width: 70%;
     margin-bottom: 7%;
+    margin-left: 4%;
    
   }
 /*  .banner2 a{
@@ -1655,7 +1658,7 @@ section {
   }
   #header button {
   /*padding: 0;*/
-  margin-top: -1%;
+  margin-top: 0%;
   font-size:10px
   /*padding-top: -100px;*/
   }
@@ -1710,10 +1713,6 @@ section {
 
 
 
-
-/*  .nav-toggle-active {
-    right: 180px;
-  }*/
 
   #hero h1 {
   /*margin: 0 0 3% 0;*/
