--- a/assets/css/wwd.css
+++ b/assets/css/wwd.css
@@ -1117,3 +1117,136 @@ section {
 #textBody p{
   font-family: 'Newsreader', serif;
 }
+
+
+
+
+
+/*Phone Potrait*/
+@media (max-width: 576px){
+  .about {
+      margin-left: 12%;
+      margin-right: 12%;
+      margin-top: -2%;
+      margin-bottom: -9%;
+  }
+  #hero h1 {
+  
+    font-size:3rem;
+    font-weight: 700;
+    line-height: 56px;
+    line-height: 56px;
+
+  }
+  #inputFname{
+    width: 48%;
+  }
+  #inputLname{
+    width: 48%;
+  }
+  #inputEmail{
+    width: 98.75%;
+  }
+  #comments{
+    width: 98.75%;
+  }
+  .about h3{
+    font-size: 1.8rem;
+  }
+  .about h6{
+    font-size: 1.5rem;
+    margin-bottom: 8%;
+  }
+  .otherFooter p{
+    padding-right: 15%;
+    padding-left: 15%;
+
+  }
+  #information{
+    /*border: 3px solid red;*/
+    font-size: 1rem;
+
+  }
+  .nav-menu {
+    width: 160px;
+  }
+  .nav-toggle-active {
+    right: 180px;
+  }
+
+  #header .logo img {
+    height: 50px;
+  }
+  #header button {
+    margin-top: -1%;
+    font-size:10px
+  }
+}
+
+/*Phone Landscape and Tablet Potrait*/ 
+@media (min-width: 577px) and (max-width: 900px){
+
+
+/*  .about {
+      margin-left: 15%;
+      margin-right: 15%;
+      margin-top: -2%;
+      margin-bottom: -2%;
+  }*/
+/*  .about h3{
+    font-size: 2rem;
+  }
+
+  .about h6{
+    font-size: 1.5rem;
+  }
+*/
+  .otherFooter p{
+  /*  padding-right: 19%;
+    padding-left: 19%;*/
+
+  }
+  #hero h1 {
+  
+  /*font-size:3.9rem;
+  font-weight: 700;
+  line-height: 56px;
+  line-height: 56px;*/
+  }
+  .nav-menu {
+    width: 160px;
+  }
+  .nav-toggle-active {
+    right: 180px;
+  }
+  #header .logo img {
+    height: 60px;
+  }
+  #header button {
+    margin-top: -1%;
+    font-size:10px
+  }
+}
+
+/*Tablet Landscape and Laptop*/
+@media (min-width: 901px) and (max-width: 1050px){
+  .about {
+/*      margin-left: 17%;
+      margin-right: 17%;
+      margin-bottom: -2%;*/
+  }
+
+  .otherFooter p{
+/*    padding-right: 20%;
+    padding-left: 20%;*/
+
+  }
+  #header button {
+    margin-top: -0.5%;
+    font-size:10px
+  }
+
+}
+
+/*PC*/
+@media (min-width: 1051px){}
