--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1196,6 +1196,9 @@ section {
 
 }
 
+
+
+
 /*Phone Landscape and Tablet Potrait*/ 
 @media (min-width: 577px) and (max-width: 900px){
   .banner2 img{
@@ -1732,6 +1735,188 @@ section {
 
 
   }
+
+}
+
+@media (max-width: 800px) and (max-height: 450px){
+  .banner2 img{
+    height: 85%;
+    width: 89%;
+  }
+  .banner3 img{
+    height: 85%;
+    width: 89%;
+  }
+  #images .container .row #firstImage{
+    padding-left: 0;
+  }
+
+  .banner2{
+    /*text-align: center;*/
+    margin-bottom: 13%;
+  }
+
+/*  .banner2 a{
+    margin-bottom: 15%;
+  }
+
+  .banner3 a{
+    margin-bottom: 15%;
+  }*/
+
+  #images h4{
+    margin-top: 5%;
+  }
+
+  #header .logo img {
+  /*padding: 0;*/
+  /*margin: 0;*/
+  height: 50px;
+  /*padding-top: -100px;*/
+  }
+  #header button {
+  /*padding: 0;*/
+  margin-top: -1.5%;
+  /* font-size:5px */
+  /*padding-top: -100px;*/
+  }
+  #hero {
+  width: 100%;
+  height: 80vh;
+/*  background: url("../img/zac-ong-JHN1-mpgXjo-unsplash.jpg") center center;
+  background-size: cover;
+  position: relative;
+  margin-top: -80px;
+  z-index: 9;*/
+  }
+  .about h3 {
+  font-weight: 300;
+  font-size: 26px;
+  margin-bottom: 10%;
+  /*border: 3px solid #18d26e;*/
+  margin-left: 15%;
+  margin-right: 15%;
+  margin-top: -13%;
+  }
+  .about p {
+
+  /*border: 3px solid #18d26e;*/
+  margin-left: -75%;
+  margin-right: -75%;
+  margin-bottom: 10%;
+  
+  }
+  .about {
+
+  /*border: 3px solid #18d26e;*/
+  margin-bottom: -10%;
+
+  
+  }
+  #images{
+   /* border: 3px solid #18d26e;*/
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: -5%;
+    margin-bottom: 13%;
+    text-align: center;
+  }
+
+  .otherFooter p{
+    /*border: 3px solid #18d26e;*/
+    margin-left: 2%;
+    margin-right: 2%;
+    /*margin-top: 2%;*/
+    /*margin-bottom: 5%;*/
+    padding-bottom: 7%;
+    padding-top: 7%;
+  }
+/*  #footer{
+    border: 3px solid #18d26e;
+    margin-left: 15%;
+    margin-right: 15%;
+  }*/
+  #hero {
+  width: 100%;
+  height: 70vh;
+  background: url("../img/zac-ong-JHN1-mpgXjo-unsplash.jpg") center center;
+  background-size: cover;
+  position: relative;
+  margin-top: -80px;
+  z-index: 9;
+  overflow-x:hidden;
+  /*margin-right: 40%;*/
+  /*margin-left: 40%;*/
+  /* border: 3px solid #18d26e; */
+
+}
+
+.nav-toggle {
+  /* position: fixed;
+  right: 15px;
+  top: 15px;
+  z-index: 9998;
+  border: 0;
+  background: rgba(34, 34, 34, 0.5);
+  transition: all 0.4s;
+  outline: none !important;
+  line-height: 1;
+  cursor: pointer;
+  text-align: right; */
+  padding: 6px 8px;
+
+}
+
+  .nav-menu {
+/*    position: fixed;
+    top: 0;
+    bottom: 0;
+    z-index: 9999;
+    overflow-y: auto;
+    right: -260px;*/
+    width: 160px;
+/*    padding-top: 18px;
+    background: rgba(34, 34, 34, 0.8);
+    transition: 0.4s;*/
+  }
+  .nav-toggle-active {
+    right: 180px;
+  }
+
+  #hero h1 {
+  /* margin: 0 0 10px 0; */
+  /*font-size: 48px;*/
+  font-size:2.3rem;
+  font-weight: 700;
+  line-height: 56px;
+  line-height: 56px;
+  color: white;
+  margin-top: 6%;
+
+  animation: fadeInAnimation ease 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  /* border: 3px solid #18d26e; */
+  }
+
+
+  .otherFooter p{
+    /*border: 3px solid #18d26e;*/
+    padding-left: 7%;
+    padding-right: 7%;
+  }
+  #hero h2 {
+/*    color: white;
+    margin-bottom: 30px;
+    margin-top: 25px;*/
+    /*font-size: 24px;*/
+    font-size:1.5rem;
+    margin-top: 0%;
+/*
+    animation: fadeInAnimation ease 3s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;*/
+}
 
 }
 
