--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1740,29 +1740,38 @@ section {
 
 @media (max-width: 800px) and (max-height: 450px){
   .banner2 img{
-    height: 85%;
-    width: 89%;
+    height: 80%;
+    width: 84%;
   }
   .banner3 img{
-    height: 85%;
-    width: 89%;
+    height: 80%;
+    width: 84%;
+
   }
   #images .container .row #firstImage{
-    padding-left: 0;
+    padding-right: 0;
+  }
+  #images .container .row #secondImage{
+    padding-right: 0;
+
   }
 
   .banner2{
     /*text-align: center;*/
-    margin-bottom: 13%;
+    margin-bottom: 8%;
+    padding-right: -15%;
+    
   }
 
-/*  .banner2 a{
-    margin-bottom: 15%;
+  .banner3{
+    /*text-align: center;*/
+    margin-bottom: -8%;
+    /* border: 3px solid #18d26e; */
   }
 
-  .banner3 a{
-    margin-bottom: 15%;
-  }*/
+
+
+
 
   #images h4{
     margin-top: 5%;
@@ -1789,15 +1798,7 @@ section {
   margin-top: -80px;
   z-index: 9;*/
   }
-  .about h3 {
-  font-weight: 300;
-  font-size: 26px;
-  margin-bottom: 10%;
-  /*border: 3px solid #18d26e;*/
-  margin-left: 15%;
-  margin-right: 15%;
-  margin-top: -13%;
-  }
+
   .about p {
 
   /*border: 3px solid #18d26e;*/
@@ -1823,13 +1824,12 @@ section {
   }
 
   .otherFooter p{
-    /*border: 3px solid #18d26e;*/
+    
     margin-left: 2%;
     margin-right: 2%;
     /*margin-top: 2%;*/
     /*margin-bottom: 5%;*/
-    padding-bottom: 7%;
-    padding-top: 7%;
+
   }
 /*  #footer{
     border: 3px solid #18d26e;
@@ -1891,7 +1891,7 @@ section {
   line-height: 56px;
   line-height: 56px;
   color: white;
-  margin-top: 6%;
+  margin-top: 7%;
 
   animation: fadeInAnimation ease 3s;
   animation-iteration-count: 1;
@@ -1906,16 +1906,18 @@ section {
     padding-right: 7%;
   }
   #hero h2 {
-/*    color: white;
-    margin-bottom: 30px;
-    margin-top: 25px;*/
-    /*font-size: 24px;*/
     font-size:1.5rem;
     margin-top: 0%;
-/*
-    animation: fadeInAnimation ease 3s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;*/
+
+}
+.description{
+
+  /* border: 3px solid red; */
+  width: 31%;
+  margin-bottom: 3%;
+  /* text-align: center;
+  margin:auto;
+  font-family: Source Serif Pro; */
 }
 
 }
