--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1601,23 +1601,23 @@ section {
 
 @media (min-width: 1051px){
   .banner2 img{
-    height: 100%;
-    width: 100%;
+    height: 125%;
+    width: 129%;
     /*padding-left:0 !important;
     padding-right:0 !important;*/
 
   }
   .banner3 img{
-    height: 100%;
-    width: 100%;
+    height: 125%;
+    width: 129%;
 
   }
 
   #images .container .row #firstImage{
-
+    padding: 0;
   }
   #images .container .row #secondImage{
-
+    padding: 0;
   }
 
   #images h4{
@@ -1632,14 +1632,14 @@ section {
     /*border: 3px solid #18d26e;*/
     margin-bottom: 7%;
     width: 71%;
-    margin-left: 30%;
+    /*margin-left: 30%;*/
   }
   .banner3{
     text-align: center;
     /*border: 3px solid #18d26e;*/
     width: 70%;
     margin-bottom: 7%;
-    margin-left: 4%;
+    /*margin-left: 4%;*/
    
   }
 /*  .banner2 a{
